@@ -8,16 +8,15 @@ import com.sptp.dawnary.location.repository.LocationRepository;
 import com.sptp.dawnary.member.domain.Member;
 import com.sptp.dawnary.member.repository.MemberRepository;
 import com.sptp.dawnary.schedule.domain.Schedule;
-import com.sptp.dawnary.schedule.dto.ScheduleDto;
+import com.sptp.dawnary.schedule.dto.ScheduleRequest;
+import com.sptp.dawnary.schedule.dto.ScheduleResponse;
 import com.sptp.dawnary.schedule.repository.ScheduleRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,39 +28,41 @@ public class ScheduleService {
     private final MemberRepository memberRepository;
     private final LocationRepository locationRepository;
 
-    private final ModelMapper modelMapper;
-
     // 스케줄 등록
-    public ScheduleDto saveSchedule(ScheduleDto scheduleDto) {
+    public ScheduleResponse saveSchedule(ScheduleRequest scheduleRequest) {
         Member member = getMember();
-        Schedule schedule = modelMapper.map(scheduleDto, Schedule.class);
+        Schedule schedule = Schedule.toEntity(scheduleRequest);
         schedule.setMember(member);
         schedule.setLocation(null);
 
-        Schedule savedSchedule = scheduleRepository.save(schedule);
+        scheduleRepository.save(schedule);
+        if(scheduleRequest.locationRequest() == null) {
+            return ScheduleResponse.toResponse(schedule);
+        }
+        Location location = Location.toEntity(scheduleRequest.locationRequest());
+        location.setSchedule(schedule);
 
-        Location location = modelMapper.map(scheduleDto.getLocation(), Location.class);
-        location.setSchedule(savedSchedule);
+        locationRepository.save(location);
+        schedule.setLocation(location);
+        scheduleRepository.save(schedule);
 
-        Location savedLocation = locationRepository.save(location);
-        savedSchedule.setLocation(savedLocation);
-        scheduleRepository.save(savedSchedule);
-
-        return modelMapper.map(savedSchedule, ScheduleDto.class);
+        return ScheduleResponse.toResponse(schedule);
     }
 
     // 스케줄 수정
-    public ScheduleDto updateSchedule(Long scheduleId, ScheduleDto scheduleDto) {
-        Member member = getMember();
-        Schedule schedule = modelMapper.map(scheduleDto, Schedule.class);
-        schedule.setMember(member);
+    public ScheduleResponse updateSchedule(Long scheduleId, ScheduleRequest scheduleRequest) {
+
+        Schedule schedule = Schedule.toEntity(scheduleRequest);
+        schedule.setMember(getMember());
+
         if (scheduleRepository.existsById(scheduleId)) {
             schedule.setId(scheduleId);
-            Schedule updatedSchedule = scheduleRepository.save(schedule);
-            return modelMapper.map(updatedSchedule, ScheduleDto.class);
-        } else {
-            throw new ScheduleNotFoundException("존재하지 않는 스케줄 입니다.");
+            scheduleRepository.save(schedule);
+            return ScheduleResponse.toResponse(schedule);
         }
+
+        throw new ScheduleNotFoundException();
+
     }
 
     // 스케줄 삭제
@@ -69,30 +70,31 @@ public class ScheduleService {
         if (scheduleRepository.existsById(scheduleId)) {
             scheduleRepository.deleteById(scheduleId);
             return true;
-        } else {
-            return false;
         }
+
+        return false;
+
     }
 
     // 스케줄 목록 조회
-    public List<ScheduleDto> findAllSchedules() {
+    public List<ScheduleResponse> findAllSchedules() {
         Long memberId = MemberInfo.getMemberId();
-        List<Schedule> schedules = scheduleRepository.findAllOrderByDateDesc(memberId);
+        List<Schedule> schedules = scheduleRepository.findByMemberId(memberId);
         return schedules.stream()
-                .map(schedule -> modelMapper.map(schedule, ScheduleDto.class))
-                .collect(Collectors.toList());
+                .map(ScheduleResponse::toResponse)
+                .toList();
     }
 
     // 특정 스케줄 조회
-    public ScheduleDto findSchedule(Long scheduleId) {
+    public ScheduleResponse findSchedule(Long scheduleId) {
         Schedule schedule = scheduleRepository.findById(scheduleId)
-                .orElseThrow(() -> new ScheduleNotFoundException("존재하지 않는 스케줄 입니다."));
-        return modelMapper.map(schedule, ScheduleDto.class);
+                .orElseThrow(() -> new ScheduleNotFoundException());
+        return ScheduleResponse.toResponse(schedule);
     }
 
     private Member getMember() {
         Long memberId = MemberInfo.getMemberId();
         return memberRepository.findById(memberId)
-                .orElseThrow(() -> new MemberNotFoundException("멤버가 존재하지 않습니다."));
+                .orElseThrow(() -> new MemberNotFoundException());
     }
 }
