@@ -1,156 +1,149 @@
 package com.sptp.dawnary.series.service;
 
-import java.time.LocalDateTime;
-import java.time.YearMonth;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
-import com.sptp.dawnary.diary.domain.Diary;
-import com.sptp.dawnary.diary.dto.DiaryDto;
+import com.sptp.dawnary.diary.dto.DiaryResponse;
 import com.sptp.dawnary.diary.repository.DiaryRepository;
+import com.sptp.dawnary.elastic.document.SeriesDocument;
+import com.sptp.dawnary.elastic.repository.SeriesElasticRepository;
+import com.sptp.dawnary.global.exception.DiaryNotFoundException;
 import com.sptp.dawnary.global.exception.MemberNotFoundException;
 import com.sptp.dawnary.global.exception.SeriesNotFoundException;
 import com.sptp.dawnary.global.util.MemberInfo;
 import com.sptp.dawnary.member.domain.Member;
 import com.sptp.dawnary.member.repository.MemberRepository;
-import com.sptp.dawnary.series.dto.SeriesDto;
-import com.sptp.dawnary.series.repository.SeriesRepository;
 import com.sptp.dawnary.series.domain.Series;
+import com.sptp.dawnary.series.dto.SeriesRequest;
+import com.sptp.dawnary.series.dto.SeriesResponse;
+import com.sptp.dawnary.series.repository.SeriesRepository;
 import com.sptp.dawnary.seriesDiary.domain.SeriesDiary;
 import com.sptp.dawnary.seriesDiary.repository.SeriesDiaryRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.time.LocalDateTime;
+import java.time.YearMonth;
+import java.util.List;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
+@Slf4j
 public class SeriesService {
 
     private final SeriesRepository seriesRepository;
     private final MemberRepository memberRepository;
     private final DiaryRepository diaryRepository;
     private final SeriesDiaryRepository seriesDiaryRepository;
+    private final SeriesElasticRepository seriesElasticRepository;
+
 
     // 전체 시리즈 조회
-    public List<SeriesDto> findAllSeriesByLatest() {
-        return seriesRepository.findAllOrderByLatest()
-                .stream()
-                .map(seriesDto -> {
-                    seriesDto.setDiaries(getDiaries(seriesDto.getId()));
-                            return seriesDto;
-                })
-                .collect(Collectors.toList());
+    public List<SeriesResponse> findAllSeriesByLatest() {
+        return seriesRepository.findAllOrderByLatest(MemberInfo.getMemberId()).stream()
+                .map(series -> SeriesResponse.toResponse(series, getDiaries(series.getId())))
+                .toList();
     }
 
     // 명예의 전당(좋아요 많은 순 조회)
-    public List<SeriesDto> findAllSeriesByLikes() {
-        return seriesRepository.findAllOrderByLikes()
-                .stream()
-                .map(seriesDto -> {
-                    seriesDto.setDiaries(getDiaries(seriesDto.getId()));
-                    return seriesDto;
-                })
-                .collect(Collectors.toList());
+    public List<SeriesResponse> findAllSeriesByLikes() {
+        return seriesRepository.findAllOrderByLikes(MemberInfo.getMemberId()).stream()
+                .map(series -> SeriesResponse.toResponse(series, getDiaries(series.getId())))
+                .toList();
     }
 
     // 월별 시리즈
-    public List<SeriesDto> findMonthlySeriesByLikes() {
+    public List<SeriesResponse> findMonthlySeriesByLikes() {
         YearMonth currentMonth = YearMonth.from(LocalDateTime.now());
         LocalDateTime startDate = currentMonth.atDay(1).atStartOfDay();
         LocalDateTime endDate = currentMonth.atEndOfMonth().atTime(23, 59, 59);
 
-        return seriesRepository.findAllOrderByLikesByMonth(startDate, endDate)
-                .stream()
-                .map(seriesDto -> {
-                    seriesDto.setDiaries(getDiaries(seriesDto.getId()));
-                    return seriesDto;
-                })
-                .collect(Collectors.toList());
+        return seriesRepository.findAllOrderByLikesByMonth(MemberInfo.getMemberId(), startDate, endDate).stream()
+                .map(series -> SeriesResponse.toResponse(series, getDiaries(series.getId())))
+                .toList();
     }
 
     // 멤버 시리즈 최신순
-    public List<SeriesDto> findMemberSeriesByLatest(Long memberId) {
-        return seriesRepository.findMemberSeriesByLatest(memberId)
-                .stream()
-                .map(seriesDto -> {
-                    seriesDto.setDiaries(getDiaries(seriesDto.getId()));
-                    return seriesDto;
-                })
-                .collect(Collectors.toList());
+    public List<SeriesResponse> findMemberSeriesByLatest(Long memberId) {
+        return seriesRepository.findMemberSeriesByLatest(MemberInfo.getMemberId(), memberId).stream()
+                .map(series -> SeriesResponse.toResponse(series, getDiaries(series.getId())))
+                .toList();
     }
 
     // 멤버 시리즈 좋아요순
-    public List<SeriesDto> findMemberSeriesByLikes(Long memberId) {
-        return seriesRepository.findMemberSeriesByLikes(memberId)
-                .stream()
-                .map(seriesDto -> {
-                    seriesDto.setDiaries(getDiaries(seriesDto.getId()));
-                    return seriesDto;
-                })
-                .collect(Collectors.toList());
+    public List<SeriesResponse> findMemberSeriesByLikes(Long memberId) {
+        return seriesRepository.findMemberSeriesByLikes(MemberInfo.getMemberId(), memberId).stream()
+                .map(series -> SeriesResponse.toResponse(series, getDiaries(series.getId())))
+                .toList();
     }
 
     // 시리즈 저장
-    public Series saveSeries(Series series) {
+    public SeriesResponse saveSeries(SeriesRequest seriesFormDto) {
+        Series series = Series.toEntity(seriesFormDto);
         series.setMember(getMember());
-        Series result = seriesRepository.save(series);
-        return result;
-    }
 
-    // 시리즈 수정
-    public boolean updateSeries(Long seriesId, Series series) {
-        series.setMember(getMember());
-        if(seriesRepository.existsById(seriesId)) {
-            series.setId(seriesId);
-            seriesRepository.save(series);
-            return true;
-        }
-        return false;
+        seriesRepository.save(series);
+
+        saveSeriesDiaries(seriesFormDto, series);
+
+        //document에 저장
+        SeriesDocument sd = SeriesDocument.from(series);
+        seriesElasticRepository.save(sd);
+        return SeriesResponse.toResponse(series, getDiaries(series.getId()));
     }
 
     // 시리즈 삭제
-    public boolean deleteSeries(Long seriesId) {
-        if(seriesRepository.existsById(seriesId)) {
+    public void deleteSeries(Long seriesId) {
+        if (seriesRepository.existsById(seriesId)) {
             seriesRepository.deleteById(seriesId);
-            return true;
+            //document에서 삭제
+            seriesElasticRepository.deleteById(seriesId);
         }
 
-        throw new SeriesNotFoundException("존재하지 않는 시리즈입니다.");
+        throw new SeriesNotFoundException();
     }
 
     // 특정 시리즈 조회
-    public SeriesDto findSeries(Long seriesId) {
-        if(seriesRepository.existsById(seriesId)) {
-            Series series = seriesRepository.findById(seriesId).get();
-            List<DiaryDto> diaries = getDiaries(seriesId);
-            return SeriesDto.builder()
-                    .id(seriesId)
-                    .name(series.getMember().getName())
-                    .imagePath(series.getImagePath())
-                    .status(series.getStatus())
-                    .title(series.getTitle())
-                    .diaries(diaries)
-                    .regDate(series.getRegDate())
-                    .memberId(series.getMember().getId())
-                    .viewCnt(series.getViewCnt())
-                    .build();
-        }
-        throw new SeriesNotFoundException("존재하지 않는 시리즈입니다.");
+    public SeriesResponse findSeries(Long seriesId) {
+        Optional<Series> series = seriesRepository.findById(seriesId);
+
+        if(series.isEmpty()) throw new SeriesNotFoundException();
+
+        List<DiaryResponse> diaries = getDiaries(series.get().getId());
+
+        return SeriesResponse.toResponse(series.get(), diaries);
     }
 
-    private List<DiaryDto> getDiaries(Long seriesId) {
-        List<SeriesDiary> seriesDiaries = seriesDiaryRepository.findBySeriesId(seriesId);
-        return seriesDiaries.stream()
+    private void saveSeriesDiaries(SeriesRequest seriesRequest, Series series) {
+
+        seriesRequest.diaries().forEach(diaryId -> {
+
+            log.info("diaryId = {}", diaryId);
+
+            if (!diaryRepository.existsById(diaryId)) {
+                throw new DiaryNotFoundException();
+            }
+
+            SeriesDiary seriesDiary = SeriesDiary.builder()
+                    .series(series)
+                    .diary(diaryRepository.findById(diaryId).get())
+                    .build();
+            seriesDiaryRepository.save(seriesDiary);
+
+        });
+    }
+    private List<DiaryResponse> getDiaries(Long seriesId) {
+        return seriesDiaryRepository.findBySeriesId(seriesId).stream()
                 .map(SeriesDiary::getDiary)
-                .map(DiaryDto::toDto)
-                .collect(Collectors.toList());
+                .map(DiaryResponse::toResponse)
+                .toList();
     }
 
     private Member getMember() {
         Long memberId = MemberInfo.getMemberId();
-        Optional<Member> member = memberRepository.findById(memberId);
-        if(member.isEmpty()) throw new MemberNotFoundException("멤버가 존재하지 않습니다.");
-        return member.get();
+        return memberRepository.findById(memberId)
+                .orElseThrow(() -> new MemberNotFoundException());
     }
+
 }
